--- a/css/style.css
+++ b/css/style.css
@@ -178,12 +178,12 @@ header .navbar .dropdown-menu a {
 
 .site-logo a {
     color: #000;
-    font-size: 90px;
+    font-size: 45px;
 }
 
 @media (max-width: 991.98px) {
     .site-logo a {
-        font-size: 40px;
+        font-size: 30px;
     }
 }
 
@@ -329,9 +329,9 @@ header .navbar .dropdown-menu a {
 }
 
 .bio img {
-    border: 4px solid #fff;
-    -webkit-box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.4);
-    box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.4);
+    border: 2px solid #fff;
+    -webkit-box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.3);
     max-width: 100px;
     margin-top: -4em;
     border-radius: 50%;
@@ -345,8 +345,13 @@ header .navbar .dropdown-menu a {
 
 .bio .bio-body .social a {
     color: #000;
+    opacity: .5;
+    padding: 5px;
 }
 
+.bio .bio-body .social a:hover {
+    opacity: 1;
+}
 .site-hero {
     background-size: cover;
     background-position: center center;
@@ -1875,8 +1880,8 @@ blockquote p {
 
 #loader {
     position: fixed;
-    width: 96px;
-    height: 96px;
+    width: 10px;
+    height: 10px;
     left: 50%;
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
